app/styles/main.css
body {
  width: 100%;
  color: #fff;
  background-color: #AD3335;
  -webkit-font-smoothing: antialiased;
}

h1 {
  font-size: 40px;
}

#section-title {
  font-family: 'Niconne', cursive;
}
#section-console {
  margin: 10px 0;
}

#input-searchword::-webkit-input-placeholder {
    color: #ffb3b3;
}
#input-searchword {
  width: 90%;
  margin-left: 4px;
  background-color: transparent;
  border: none;
  border-radius: 0px;
  border-bottom: 1px solid #fff;
}
#input-searchword:focus {
  outline: 0;
}

#current-sort {
  padding: 0 4px 0 0;
  border-bottom: 1px solid #fff;
}

#select-sort {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, .6);
  overflow: hidden;
  display: none;
}
#select-sort .container {
  padding: 100px 0;
  width: 75%;
}
#select-sort li {
  list-style-type: none;
  font-size: 20px;
  font-weight: bold;
  /*margin: 14px 0;*/
  padding: 10px 0;
}
#select-sort .closer {
  position: absolute;
  top: 40px;
  right: 40px;
  font-size: 40px;
}

#orders {
  width: 100%;
}
.order {
  border: none;
  padding: 10px 0px;
  position: relative;
}
.order-wrapper {
  background-image: url('http://static1.squarespace.com/static/51ab58f4e4b0361e5f3ed294/51ab58f4e4b0361e5f3ed29a/51ab80bee4b0058e26cfcb1f/1370194240299/Benchmark_Restaurant_Dining_Room_Photographed_by_Evan_Sung.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  padding-top: 10px;
}
.order-back {
  /*background-color: #891518;*/
  background-color: #000;
  opacity: 0.6;
  position: absolute;
  top: 10px;
  width: 100%;
  height: 130px;
  z-index: 1;
}
.order .container {
  position: relative;
  top: 0px;
  z-index: 100;
}
.order-title {
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 8px;
}
.order-summary {
  font-size: 12px;
  margin-bottom: 4px;
}
.order-map {
  padding-left: 0;
}
.order-meta {
  margin: 0;
  font-size: 10px;
  margin-top: 4px;
}
.order-meta:nth-child {
  margin-top: 0px;
}
.order-price {
  text-align: right;
  font-size: 18px;
}
.order-members {
  margin-top: 0px;
  text-align: right;
  font-size: 26px;
  font-weight: normal;
}
.order-members small {
  font-size: 14px;
}

